feat(backend): implement password recovery (#3)
