# backend/internal/rest/dto/auth.go
@@ -16,10 +16,11 @@ type SignUpRequestBody struct {
 	Password string `json:"password" binding:"required,min=8,max=64"`
 } //@Name SignUpRequestBody
 
-type SignUpResponse struct {
+type AuthResponseSuccess struct {
 	User   *UserResponse `json:"user"`
 	Tokens *Tokens       `json:"tokens"`
-} //@Name SignUpResponse
+}
+type SignUpResponse AuthResponseSuccess //@Name SignUpResponse
 
 // --- Login ---
 
@@ -28,10 +29,7 @@ type LogInRequestBody struct {
 	Password string `json:"password" binding:"required,min=8,max=64"`
 } //@Name LogInRequestBody
 
-type LogInResponse struct {
-	User   *UserResponse `json:"user"`
-	Tokens *Tokens       `json:"tokens"`
-} //@Name LogInResponse
+type LogInResponse AuthResponseSuccess //@Name LogInResponse
 
 // --- Tokens ---
 
@@ -61,5 +59,16 @@ type PasswordRecoveryRequestBody struct {
 // verify recovery code, entered by user
 type VerifyRecoveryCodeRequestBody struct {
 	Email string `json:"email" binding:"required,email"`
-	Code  string `json:"code" binding:"required"`
+	Code  string `json:"code" binding:"required,min=6,max=6,numeric"`
 } //@Name VerifyRecoveryCodeRequestBody
+
+type VerifyRecoveryCodeResponse struct {
+	ResetToken string `json:"reset_token"`
+} //@Name VerifyRecoveryCodeResponse
+
+type ResetPasswordRequestBody struct {
+	NewPassword string `json:"new_password" binding:"required,min=8,max=64"`
+	ResetToken  string `json:"reset_token" binding:"required"`
+} //@Name ResetPasswordRequestBody
+
+type ResetPasswordResponse AuthResponseSuccess //@Name ResetPasswordResponse
